bdy overflow fix

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -3,6 +3,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  overflow-y: scroll;
 }
 html, body {
   height: 100%;
