--- a/client/src/pages/DashboardPage/MyBoardContainer.scss
+++ b/client/src/pages/DashboardPage/MyBoardContainer.scss
@@ -22,6 +22,7 @@
         justify-content: center;
         align-items: center;
         padding: 0.6rem 0.2rem;
+
         @include mq-2 {
             grid-column: 1/4;
         }
@@ -56,6 +57,7 @@
 	.board-container {
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
+		grid-row: 1;
 		.pagination-container {
             grid-column: 1/5;
             height: 2rem;
